syntax = "proto3";

option go_package = "F:/Proyectos/lab2distribuidos/maquina3/pozoEntity/pozo";

package pozo;

message MountReq{
}

message MountResp{
    double monto = 1;
}

service PozoService{
    rpc SendMount(MountReq) returns (MountResp);
}